# PersonalFinanceManager

./: .gitignore  README.md
PersonalFinanceManager/: CMakeLists.txt  main.cpp  run_windows.bat
PersonalFinanceManager.xcodeproj/: project.pbxproj
PersonalFinanceManager/include/Controllers/: AppController.h  NavigationController.h
PersonalFinanceManager/include/Models/: Category.h  Expense.h  Income.h  IncomeSource.h  RecurringTransaction.h  Transaction.h  Wallet.h
PersonalFinanceManager/include/Utils/: AppHelpers.h  ArrayList.h  BinaryFileHelper.h  Date.h  Enums.h  HashMap.h  HashStrategies.h  IdGenerator.h  PlatformUtils.h
PersonalFinanceManager/include/Views/: ConsoleView.h  DashBoard.h  InputValidator.h  Menus.h
PersonalFinanceManager/src/: Expense.cpp  ExpenseCategory.cpp  Income.cpp  IncomeSource.cpp  UnitTest.cpp  main.cpp
PersonalFinanceManager/src/Controllers/: AppController.cpp  NavExpense.cpp  NavIncome.cpp  NavMain.cpp  NavRecurring.cpp  NavReport.cpp  NavSearch.cpp  NavWallet.cpp  NavigationController.cpp
PersonalFinanceManager/src/Models/: Category.cpp  Expense.cpp  Income.cpp  IncomeSource.cpp  RecurringTransaction.cpp  Transaction.cpp  Wallet.cpp
PersonalFinanceManager/src/Utils/: AppHelpers.cpp  BinaryFileHelper.cpp  Date.cpp  IdGenerator.cpp
PersonalFinanceManager/src/Views/: ConsoleView.cpp  DashBoard.cpp  InputValidator.cpp  Menus.cpp
Report/: hcmus-report-template.sty  main.tex
Report/content/: M2.tex  assignment.tex  design.tex  future_work.tex  implementation.tex  overview.tex  requirements.tex  technical_core.tex  title.tex
(+2 files in other folders)
